[gd_scene load_steps=8 format=2]

[ext_resource path="res://level_select.gd" type="Script" id=1]
[ext_resource path="res://sprites/level_numbers.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="level_select" type="Node2D"]
script = ExtResource( 1 )

[node name="level_1" type="Area2D" parent="."]
position = Vector2( -33.068, -24 )

[node name="Sprite" type="Sprite" parent="level_1"]
texture = ExtResource( 2 )
vframes = 3
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_1"]
shape = SubResource( 1 )

[node name="level_2" type="Area2D" parent="."]
position = Vector2( -0.045, -24 )

[node name="Sprite" type="Sprite" parent="level_2"]
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_2"]
shape = SubResource( 2 )

[node name="level_3" type="Area2D" parent="."]
position = Vector2( 35.668, -24 )

[node name="Sprite" type="Sprite" parent="level_3"]
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_3"]
shape = SubResource( 3 )

[node name="level_4" type="Area2D" parent="."]
position = Vector2( -21, 25 )

[node name="Sprite" type="Sprite" parent="level_4"]
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_4"]
shape = SubResource( 4 )

[node name="level_5" type="Area2D" parent="."]
position = Vector2( 21, 25 )

[node name="Sprite" type="Sprite" parent="level_5"]
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_5"]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Label" type="Label" parent="."]
margin_left = -48.063
margin_top = -6.35543
margin_right = 48.937
margin_bottom = 7.64457
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Choose a level!"
